--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <meta name="theme-color" content="#030412" />
+    <meta name="description" content="Khushal Nirwal - AI/ML Engineer building modern, agentic solutions" />
+    <title>Khushal | AI/ML Engineer</title>
   </head>
   <body>
     <div id="root"></div>
